	configuration upgrades: only upgrade and migration specifications
	need to be specified in a model. Parameters that don't change from
	one version to another need not to be specified in the model.

	Other changes:
	* lib/Config/Model/Loader.pm (_walk_node): bug fix to load node
	element annotation
	* lib/Config/Model/Dumper.pm (): bug fix to dump hash and list
	element annotations

2010-06-04  Dominique Dumont  <domi.dumont@free.fr> 1.205

	* t/node.t: patch by Niko Tyni to avoid Carp::Heavy failure. Fix
	Debian FTBS bug #582915 and countless CPAN smoke tests failures

2010-06-03  Dominique Dumont  <domi.dumont@free.fr> v1.204

	* MANIFEST.SKIP: Prompt re-release because 1.203 tarball contains
	debian packages used for tests (oops)

2010-06-03  Dominique Dumont  <domi.dumont@free.fr> v1.203

	* lib/Config/Model/Loader.pm (_load_hash): Bug fix: can load
	annotation tied to hash values (node or leaf).

2010-04-22  Dominique Dumont  <domi.dumont@free.fr> v1.202

	SUMMARY:

	* New core feature: user can store annotation (e.g. structured
	comments) with each configuration object of the configuration
	tree, be it node, leaf, hash or list. Read backend can parse
	confguration file comments and store them in annotations.

	For instance ShellVar read backend will parse comments and store
	them in the configuration tree. ShellVar write backend will put
	them back in the configuration file.

	* PopCon editor preserve comments in configuration file.

	* Code: Uses Moose for C::M::Annotation and C::M::Backend::Any. Moose
	looks good. I may use Moose for all other Config::Model classes later.

2010-04-22  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Backend/ShellVar.pm (read): Tries its best to
	read user comments and store them in annotations.
	(write): Write annotation as comments. Write model documentation
	as comments starting with '##'

2010-04-19  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/AnyThing.pm (grab_annotation): new method
